cabal-version: 1.12

name:           information-streams
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/aspiwack/information-streams#readme>
homepage:       https://github.com/aspiwack/information-streams#readme
bug-reports:    https://github.com/aspiwack/information-streams/issues
author:         Arnaud Spiwack
maintainer:     arnaud@spiwack.net
copyright:      2019 Arnaud Spiwack
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/aspiwack/information-streams

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite information-streams-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , information-streams
  default-language: Haskell2010
